bk_ida/gccida/c0/extract_insn
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/extract_insn/src/recog.c:2545:1: error: must use 'enum' tag to refer to type 'op_type'
op_type v3; // [rsp+8h] [rbp-48h] 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/extract_insn/src/recog.c:2553:14: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
body = ( rtx)insn[2]; 
             ^~~~~~~
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/extract_insn/src/recog.c:2554:1: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
recog_data_0.insn = 0LL; 
^~~~~~~~~~~~
recog_data
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/extract_insn/src/recog.c:72:19: note: 'recog_data' declared here
struct recog_data recog_data;
                  ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/extract_insn/src/recog.c:2555:1: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
recog_data_0.n_operands = 0; 
^~~~~~~~~~~~
recog_data
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/extract_insn/src/recog.c:72:19: note: 'recog_data' declared here
struct recog_data recog_data;
                  ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/extract_insn/src/recog.c:2556:1: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
recog_data_0.n_alternatives = 0; 
^~~~~~~~~~~~
recog_data
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/extract_insn/src/recog.c:72:19: note: 'recog_data' declared here
struct recog_data recog_data;
                  ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/extract_insn/src/recog.c:2557:1: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
recog_data_0.n_dups = 0; 
^~~~~~~~~~~~
recog_data
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/extract_insn/src/recog.c:72:19: note: 'recog_data' declared here
struct recog_data recog_data;
                  ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/extract_insn/src/recog.c:2582:1: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
recog_data_0.n_operands = noperands; 
^~~~~~~~~~~~
recog_data
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/extract_insn/src/recog.c:72:19: note: 'recog_data' declared here
struct recog_data recog_data;
                  ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/extract_insn/src/recog.c:2584:29: error: too many arguments provided to function-like macro invocation
fatal_insn_not_found( insn, "recog.c", 2139, "extract_insn"); 
                            ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/extract_insn/src/toplev.h:52:9: note: macro 'fatal_insn_not_found' defined here
#define fatal_insn_not_found(insn) \
        ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/extract_insn/src/recog.c:2584:1: error: use of undeclared identifier 'fatal_insn_not_found'; did you mean '_fatal_insn_not_found'?
fatal_insn_not_found( insn, "recog.c", 2139, "extract_insn"); 
^~~~~~~~~~~~~~~~~~~~
_fatal_insn_not_found
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/extract_insn/src/toplev.h:40:13: note: '_fatal_insn_not_found' declared here
extern void _fatal_insn_not_found       PARAMS ((struct rtx_def *,
            ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/extract_insn/src/recog.c:2589:1: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
recog_data_0.operand, 
^~~~~~~~~~~~
recog_data
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/extract_insn/src/recog.c:72:19: note: 'recog_data' declared here
struct recog_data recog_data;
                  ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/extract_insn/src/recog.c:2590:1: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
recog_data_0.operand_loc, 
^~~~~~~~~~~~
recog_data
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/extract_insn/src/recog.c:72:19: note: 'recog_data' declared here
struct recog_data recog_data;
                  ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/extract_insn/src/recog.c:2591:1: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
recog_data_0.constraints, 
^~~~~~~~~~~~
recog_data
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/extract_insn/src/recog.c:72:19: note: 'recog_data' declared here
struct recog_data recog_data;
                  ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/extract_insn/src/recog.c:2592:1: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
recog_data_0.operand_mode); 
^~~~~~~~~~~~
recog_data
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/extract_insn/src/recog.c:72:19: note: 'recog_data' declared here
struct recog_data recog_data;
                  ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/extract_insn/src/recog.c:2595:5: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
p = recog_data_0.constraints[0]; 
    ^~~~~~~~~~~~
    recog_data
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/extract_insn/src/recog.c:72:19: note: 'recog_data' declared here
struct recog_data recog_data;
                  ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/extract_insn/src/recog.c:2596:1: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
recog_data_0.n_alternatives = 1; 
^~~~~~~~~~~~
recog_data
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/extract_insn/src/recog.c:72:19: note: 'recog_data' declared here
struct recog_data recog_data;
                  ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/extract_insn/src/recog.c:2600:1: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
recog_data_0.n_alternatives += *v1 == 44; 
^~~~~~~~~~~~
recog_data
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/extract_insn/src/recog.c:72:19: note: 'recog_data' declared here
struct recog_data recog_data;
                  ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/extract_insn/src/recog.c:2611:29: error: too many arguments provided to function-like macro invocation
fatal_insn_not_found( insn, "recog.c", 2148, "extract_insn"); 
                            ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/extract_insn/src/toplev.h:52:9: note: macro 'fatal_insn_not_found' defined here
#define fatal_insn_not_found(insn) \
        ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/extract_insn/src/recog.c:2611:1: error: use of undeclared identifier 'fatal_insn_not_found'; did you mean '_fatal_insn_not_found'?
fatal_insn_not_found( insn, "recog.c", 2148, "extract_insn"); 
^~~~~~~~~~~~~~~~~~~~
_fatal_insn_not_found
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/extract_insn/src/toplev.h:40:13: note: '_fatal_insn_not_found' declared here
extern void _fatal_insn_not_found       PARAMS ((struct rtx_def *,
            ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/extract_insn/src/recog.c:2612:13: error: use of undeclared identifier 'insn_data_0'; did you mean 'insn_data'?
noperands = insn_data_0[rtint].n_operands; 
            ^~~~~~~~~~~
            insn_data
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/extract_insn/src/recog.h:249:31: note: 'insn_data' declared here
extern const struct insn_data insn_data[];
                              ^
fatal error: too many errors emitted, stopping now [-ferror-limit=]
20 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/extract_insn/src/obj/recog.o] Error 1
